# s4ddle

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: mdbook.yml  test.yml
data/: .gitignore  FIDAP_ex4.csv  GHS_indef_linverse.csv  GHS_indef_qpband.csv  GHS_indef_tuma2.csv  ash85.csv  nemeth01.csv  nemeth26.csv  nos4.csv
doc/: book.toml
doc/src/: SUMMARY.md  intro.md  minres.md
examples/: equality_constrained_quadratic_program.rs  matrix_inverse.rs
src/: cr.rs  embed.rs  lib.rs  minres.rs  minres_black_box.rs  minres_black_box_precond.rs  operators.rs  os.rs  plugins.rs  precond_methods.rs  readwrite.rs
src/embed/: cr.rs  minres.rs  operators.rs
