[package]
name = "s4ddle"
version = "0.1.0"
edition = "2021"
description = "Solvers for Sparse Symmetric Systems of Linear Equations"
readme = "README.md"
repository = "https://github.com/jevgarrido/s4ddle.git"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "solver", "sparse", "symmetric", "linear", "systems", "algebra"]

[features]
default = ["std"]
std = []

[dependencies]
rstest = "0.21.0"

[dependencies.num-traits]
version = "*"
default-features = false
features = ["libm"]
