[package]
name = "s4ddle"
version = "0.2.0"
edition = "2021"
description = "Solvers for Sparse Symmetric Systems of Linear Equations"
readme = "README.md"
repository = "https://github.com/jevgarrido/s4ddle.git"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "solver", "sparse", "symmetric", "linear", "systems", "algebra"]
categories = ["no-std", "no-std::no-alloc", "embedded", "algorithms", "mathematics", "science"]

[features]
default = ["std"]
std = []

[dependencies.num-traits]
version = "0.2"
default-features = false
features = ["libm"]

[dev-dependencies]
rstest = "*"

[[example]]
name = "matrix_inverse"
crate-type = ["bin"]


[[example]]
name = "equality_constrained_quadratic_program"
crate-type = ["bin"]

